# VideoMessenger

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
VideoMessenger/: CMakeLists.txt  VideoMessenger.cpp  VideoMessenger.h
VideoMessenger/Communications/: CMakeLists.txt  Comms.cpp  Comms.h
VideoMessenger/ImageHandling/: ImagePack.cpp
VideoMessengerClient/: CMakeLists.txt  VideoMessengerClient.cpp  VideoMessengerClient.h
VideoMessengerClient/ClientCommunications/: CMakeLists.txt  ClientComms.cpp  ClientComms.h
VideoMessengerClient/Test/: test_main.cpp
VideoMessengerServer/: CMakeLists.txt  VideoMessenger.cpp  VideoMessenger.h
VideoMessengerServer/Communications/: CMakeLists.txt  Comms.cpp
VideoMessengerServer/ImageHandling/: CMakeLists.txt  ImagePack.h
VideoMessengerServer/ServerCommunications/: CMakeLists.txt  ServerComms.cpp  ServerComms.h
